src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-246.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#prefix a\")"
---
items:
  - level: 1
    loc: "#prefix a"
    locs:
      directive: "#prefix"
      prefix: a
    prefix: a
    type: PrefixDirective
