src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-247.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#prefix\\ta\")"
---
items:
  - level: Prefix1
    loc: "#prefix\ta"
    locs:
      directive: "#prefix"
      prefix: a
    prefix: a
    type: PrefixDirective
