src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-250.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#prefix1 \")"
---
items:
  - level: 1
    loc: "#prefix1"
    locs:
      directive: "#prefix1"
    type: PrefixDirective
