src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-252.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#prefix1 ab!c\")"
---
items:
  - level: Prefix1
    loc: "#prefix1 ab!c"
    locs:
      directive: "#prefix1"
      prefix: ab!c
    prefix: ab!c
    type: PrefixDirective
