src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-253.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#prefix2\")"
---
items:
  - level: 2
    loc: "#prefix2"
    locs:
      directive: "#prefix2"
    type: PrefixDirective
