src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-254.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#prefix2 ab!c\")"
---
items:
  - level: 2
    loc: "#prefix2 ab!c"
    locs:
      directive: "#prefix2"
      prefix: ab!c
    prefix: ab!c
    type: PrefixDirective
