src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-255.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#prefix3\")"
---
items:
  - level: 3
    loc: "#prefix3"
    locs:
      directive: "#prefix3"
    type: PrefixDirective
